gac_sb/objects/Encaissement__c.object
<CustomObject>
    <description>SF CONSULTING - permet de saisir les encaissements sur les factures</description>
    <fields>
        <fullName>Date_encaissement__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date encaissement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Facture__c</fullName>
        <label>Facture</label>
        <referenceTo>Facture__c</referenceTo>
        <relationshipLabel>Encaissements</relationshipLabel>
        <relationshipName>Encaissements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Montant_HT__c</fullName>
        <formula>Montant_TTC__c / (1+  Facture__r.Taux_TVA__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant HT (encaissement)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_TTC__c</fullName>
        <label>Montant TTC (encaissement)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pole__c</fullName>
        <formula>Facture__r.Pole__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pôle</label>
        <type>Text</type>
    </fields>
    <label>Encaissement</label>
    <nameField>
        <displayFormat>E-{000000}</displayFormat>
        <label>N° Encaissement</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Encaissements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Date_Encaissement_inf_eguale_Date_dujour</fullName>
        <active>true</active>
        <description>Cette règle oblige à renseigner une date d&apos;encaissement inférieure ou égale à la date de saisie de l&apos;encaissement.</description>
        <errorConditionFormula>(ISNEW() ||
ISCHANGED ( Date_encaissement__c)) &amp;&amp;
(Date_encaissement__c) &gt; TODAY()</errorConditionFormula>
        <errorMessage>La date d&apos;encaissement doit obligatoirement être inférieure ou égale à la date du jour.</errorMessage>
    </validationRules>
</CustomObject>